manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: train2middle
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: train2middle
