manifests/Ingress-prd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - azuredevop.pp.ua
    secretName: quickstart-example-tls
  ingressClassName: "nginx" # security safe cert
  rules:
  - host: azuredevop.pp.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
