manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train2middle
  # annotations:
    # kubernetes.io/ingress.class: "nginx"    
    # cert-manager.io/issuer: "letsencrypt-staging"
spec:
  # tls:
  # - hosts:
  #   - azuredevop.pp.ua
  #   secretName: quickstart-example-tls
  rules:
  # ingressClassName: "nginx"
  - host: azuredevop.pp.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: train2middle
            port:
              number: 80
